# Algoritmos_de_clustering

./: README.md  pyproject.toml
Algoritmos/: ChiSquareTest.py  DBSCAN.py  Kmeans.py  Kmedoids.py  Knn.py  Kolmogorov-Smirnov.py  hierarchical_clustering.py  t-student.py
Algoritmos/clustering_axo/: kmeans.py
Algoritmos/clustering_axo2/: Kmeans.py  __init__.py
Algoritmos/clustering_axo3/: DBSCAN.py  __init__.py
Algoritmos/clustering_axo4/: ChiSquareTest.py  __init__.py
Algoritmos/clustering_axo5/: __init__.py  hierarchical_clustering.py
Algoritmos/clustering_axo6/: Kmedoids.py  __init__.py
Algoritmos/clustering_axo7/: Knn.py  __init__.py
Algoritmos/clustering_axo8/: Kolmogorov_Smirnov.py  __init__.py
Algoritmos/clustering_axo9/: __init__.py  t_student.py
Files/: preferencias_bebidas.csv
resultados/: kmeans_result.csv  knn_result.csv
tests/: test_chi.py  test_dbscan.py  test_hierarchical.py  test_kmeans.py  test_kmeas.py  test_kmedoids.py  test_knn.py  test_kolmogorov.py  test_student.py
tests/resultados/: kmeans_result.csv
