[tool.poetry]
name = "Algoritmos_de_clustering"
version = "0.1.0"
description = "clustering algorithms for axo"
packages = [
    { include = "Algoritmos" }
]
authors = ["alejandroZequeira <alejandrozequeirarosa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.12,<3.11"
zmp = "^6.9"
zmq = "^0.0.0"
mpu = "^0.23.1"
mictlanx = ">=0.0.160"
axo =   ">=0.0.2"
pymongo = "^4.13.2"
logger = "^1.4"
fastapi = "^0.116.1"
jwt = "^1.4.0"
passlib = "^1.7.4"
pandas = "^2.3.2"
scikit-learn = "^1.7.1"
matplotlib = "^3.10.5"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"